fixed bug a on fullpage where it's not showing correct movie when it has the same name

--- a/src/MyStyles/style.css
+++ b/src/MyStyles/style.css
@@ -449,7 +449,7 @@
     padding: 10px;
     padding-left: 0px;
     top: 0.5vw;
-    left: 0vw;
+    left: 1vw;
     width: 50px;
     height: 150px;
   }
